# suncal

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: Datetime.ipynb  Emojis.ipynb  astral-api.ipynb  datetime.ipynb
qa/: pychecks.sh
suncal/: auth.py  capi-create-event.py  capi-quickstart.py  cli.py  date_utils.py  fileio.py  main.py  suncal.py  suncal_main.py  utils.py
suncal/models/: astro.py  googlecal.py  icalendar.py
tests/: test_astro.py  test_cli.py  test_data.py  test_date_utils.py  test_fileio.py  test_googlecal.py  test_icalendar.py  test_suncal.py  test_timezonefinder.py  test_utils.py
