[project]
name = "suncal"
version = "1.0.0"
description = "Command line application for creation of astronomical calendars"
authors = [
    {name = "Franziska Witzel", email = "franziska.witzel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.2, <4.0.0"
dependencies = [
    "click>=8.0.1, <=9.0.0",
    "google>=3.*",
    "google-api-python-client>=2.162.*",
    "google-auth-oauthlib>=1.2.1, <=2.0.0",
    "pydantic>=2.10.6, <=3.0.0",
    "pytz>=2022.7.1, <=2023.0.0",
    "skyfield>=1.45.*",
    "timezonefinder>=6.2.0, <=7.0.0",
    "typing-extensions>=4.12.2, <5.0.0",
]

[project.scripts]
# name on the left will be the name of the command line app
suncal = "suncal.suncal:suncal" 

[build-system]
requires = ["poetry-core>=2.1.1, <3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "==25.1.0"
deptry = "==0.16.0"
isort = "^6.0.1"
jupyterlab = "^4.2.5"
mypy = "^1.15.0"
pylint = "^3.3.4"
pylint-pydantic = "==0.3.0"
pytest = "^7.2.1"
types-pytz = "^2025.1.0.20250204"
types-setuptools = "^75.8.2.20250305"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true
line_length = 80

# [tool.pylint.MASTER]
# load-plugins = "pylint_pydantic"
